--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server" : "nodemon Bot/bot.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -12,6 +13,7 @@
     "autoprefixer": "10.4.14",
     "dotenv": "^16.1.3",
     "next": "13.4.4",
+    "nodemon": "^2.0.22",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
