fix : vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-    "crons":{
-        "path": "/api/bot",
-        "schedule": " 0 0 * * *"
-    }
+    "crons":[
+        {
+            "path": "/api/bot",
+            "schedule": " 0 0 * * *"
+        }
+    ]
 }
