--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "crons":[
         {
             "path": "/api/bot",
-            "schedule": "*/1 * * * *"
+            "schedule": "0 0 * * *"
         }
     ]
 }
